tests/transpiler/x/rs/record_assign.rs
// Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:06 +0700
#[derive(Debug, Clone)]
struct Counter {
    n: i64,
}
impl std::fmt::Display for Counter {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{{")?;
        write!(f, "\"n\": {}", self.n)?;
        write!(f, "}}")
    }
}

fn inc(c: i64) {
    c = (c.n + 1);
}

fn main() {
    let mut c: Counter = Counter {n: 0};
    inc(c);
    println!("{}", c.n);
}
